--- a/src/my-view3.html
+++ b/src/my-view3.html
@@ -113,7 +113,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 				this.$.ajax.url = "http://plates/plates/testAPI";
 				this.$.ajax.body = obj;
-//				this.$.ajax.generateRequest();
+				this.$.ajax.generateRequest();
         console.log(obj);
 			}
 
